--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -56,11 +56,11 @@ canvas {
     border-color: #0d6efd;
   }
   
-  .btn-cancel {
-    color: #000;
-    background-color: #fff;
-    border: 1px solid #ddd;
-  }
+  // .btn-cancel {
+  //   color: #000;
+  //   background-color: #7b4444;
+  //   border: 1px solid #ddd;
+  // }
   
   .summary-card {
     background-color: #fff;
