--- a/src/app/direct-team/direct-team.component.html
+++ b/src/app/direct-team/direct-team.component.html
@@ -32,26 +32,32 @@
     </style>
 
     <h2 class="fw-bold"> MY Direct Team</h2>
+     <!-- <pre>{{data1 | json}}</pre> -->
     <table>
         <thead>
             <tr>
                 <th>S.No</th>
                 <th>Date</th>
-
                 <th>User Id</th>
                 <th>Name</th>
                 <th>Subcription</th>
-                <th>Status</th>
+                <!-- <th>Status</th> -->
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>DD</td>
-                <td>0x37e9</td>
-                <td>ss</td>
-                <td>56062311</td>
-                <td>2 minutes ago</td>
-                <td>56062311</td>
+            <tr *ngFor="let row of data1; let i='index'">
+                <td>{{i+1}}</td>
+                <td>{{row.cdate}}</td>
+                <td>{{row.regid}}</td>
+                <td>{{row.name}}</td>
+                <td>
+                    <span *ngIf="row.boardstatus=='0'" class="text-danger">Not Active</span>
+                    <span *ngIf="row.boardstatus=='1'" class="text-success">Active</span>
+                    <span *ngIf="row.boardstatus=='2'" class="text-primary">Silver Upgrade</span>
+                    <span *ngIf="row.boardstatus=='3'" class="text-warning">Gold Upgrade</span>
+                    <span *ngIf="row.boardstatus=='4'" class="text-info">Diamond Upgrade</span>
+                </td>
+                <!-- <td>2 minutes ago</td> -->
 
             </tr>
         
