--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -6,8 +6,8 @@
 
   <a routerLink="/dashboard"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
   <a routerLink="/referral"><i class="fas fa-user-friends me-2"></i> Referral</a>
-  <a routerLink="/subscription"><i class="fas fa-star me-2"></i> Subscription</a>
-  <a routerLink="/wallet"><i class="fas fa-wallet me-2"></i> Wallet</a>
+  <!-- <a routerLink="/subscription"><i class="fas fa-star me-2"></i> Subscription</a> -->
+  <!-- <a routerLink="/wallet"><i class="fas fa-wallet me-2"></i> Wallet</a> -->
   <a routerLink="/report"><i class="fas fa-chart-bar me-2"></i> Report</a>
   <a routerLink="/withdraw"><i class="fas fa-arrow-circle-down me-2"></i> Withdraw</a>
   <a routerLink="/profile"><i class="fas fa-user me-2"></i> Profile</a>
