--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,9 @@
     <!-- Greeting Section -->
     <div class="col-12 col-md-6 col-lg-3 mt-4" *ngIf="homedata?.profiledata">
       <h4 class="mb-1">Hi,</h4>
-      <h4 class="mb-0">{{ homedata?.profiledata?.name }}, {{ homedata?.profiledata?.regid }}</h4>
+      <h4 class="mb-3">{{ homedata?.profiledata?.name }}, {{ homedata?.profiledata?.regid }}</h4>
+      <p *ngIf="pfdata.topupstatus!='0'" class="text-success fw-bold" style="font-size: 20px;">
+        Your  Subscription is completed </p>
     </div>
 
     <!-- Share Link Section -->
