--- a/src/app/sponsor-income/sponsor-income.component.html
+++ b/src/app/sponsor-income/sponsor-income.component.html
@@ -1,12 +1,4 @@
-<div class="mb-3">
-    <label for="teamSelect" class="form-label ">Select Team</label>
-    <select id="teamSelect" class="form-select">
-      <option value=""> Select packages</option>
-      <option value="left">Sliver</option>
-      <option value="right">Gold</option>
-      <option value="tree">Diamond</option>
-    </select>
-  </div>
+
     <style>
         table {
             width: 100%;
@@ -36,22 +28,20 @@
             <tr>
                 <th>S.No</th>
                 <th>Date</th>
-                <th>User Id</th>
-                <th>Name</th>
-                <th>Subcription</th>
-                <th>Status</th>
+                <th>Income</th>
+                <th>Type</th>
+                <th>Remarks</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>DD</td>
-                <td>0x37e9</td>
-                <td>ss</td>
-                <td>56062311</td>
-                <td>2 minutes ago</td>
-                <td>56062311</td>
-
-            </tr>
+            <tr *ngFor="let items of sdata let i='index' ">
+                <td>{{i+1}}</td>
+                <td>{{items.cdate}}</td>
+                <td>${{items.amount}}</td>
+                <td>{{items.type}}</td>
+                <td>{{items.remark}}</td>
+              
+              </tr>
         
         </tbody>
     </table>
