--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -24,7 +24,7 @@
       <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link text-white" routerLink="/leftteam">Left Team</a></li>
         <li class="nav-item"><a class="nav-link text-white" routerLink="/rightteam">Right Team</a></li>
-        <li class="nav-item"><a class="nav-link text-white" routerLink="/treeview">Tree View</a></li>
+        <li class="nav-item"><a class="nav-link text-white" (click)="mytree(udata.regid)">Tree View</a></li>
       </ul>
     </div>
   </div>
