--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,57 +14,59 @@
       </h6>
     </div>
   </div>
-
   <!-- Main Content -->
   <div class="col-12 col-sm-8 col-md-9 col-lg-10">
     <div class="summary-card p-4">
-
       <!-- Profile Section -->
       <div *ngIf="currentTab === 'profile'">
-        <div class="form-card">
-          <h5>Sponsor Details</h5>
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <label>Sponsor ID</label>
-              <input type="text" class="form-control" value="6371924" readonly>
+        <form >
+          <div class="form-card" *ngIf="pffdata">
+            <h5>Sponsor Details</h5>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label>Sponsor ID</label>
+                <input type="text" class="form-control" [value]="pffdata.refid" >
+              </div>
+              <div class="col-md-6">
+                <label>Sponsor Name</label>
+                <input type="text" class="form-control" [(ngModel)]="pffdata.name" name="name">
+              </div>
             </div>
-            <div class="col-md-6">
-              <label>Sponsor Name</label>
-              <input type="text" class="form-control" value="Vidala pavani" readonly>
+        
+            <h5 class="mt-4">Basic Details</h5>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label>Name</label>
+                <input type="text" class="form-control" [(ngModel)]="pffdata.name" name="name" >
+              </div>
+              <div class="col-md-6">
+                <label>Email</label>
+                <input type="email" class="form-control" [value]="pffdata.email" >
+              </div>
+            </div>
+        
+            <h5 class="mt-4">Contact Details</h5>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label>Country</label>
+                <select class="form-control" [(ngModel)]="pffdata.country" name="country" >
+                  <option value="India">India</option>
+                  <option value="USA">USA</option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label>Phone</label>
+                <input type="text" class="form-control" [(ngModel)]="pffdata.phone" name="phone" >
+              </div>
+            </div>
+        
+            <div class="text-end">
+              <button  class="btn btn-danger me-2" type="button" (click)="edit()">Edit</button>
+              <button  class="btn btn-success me-2" type="button" (click)="save()">Save</button>
             </div>
           </div>
-
-          <h5 class="mt-4">Basic Details</h5>
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <label>Name</label>
-              <input type="text" class="form-control" value="Chandu">
-            </div>
-            <div class="col-md-6">
-              <label>Email Address</label>
-              <input type="email" class="form-control" value="nbmlive9@gmail.com" readonly>
-            </div>
-          </div>
-
-          <h5 class="mt-4">Contact Details</h5>
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <label>Country</label>
-              <select class="form-control">
-                <option>India</option>
-              </select>
-            </div>
-            <div class="col-md-6">
-              <label>Phone</label>
-              <input type="text" class="form-control" value="6309358113">
-            </div>
-          </div>
-
-          <div class="text-end">
-            <button class="btn btn-cancel me-2">Cancel</button>
-            <button class="btn btn-primary">Save</button>
-          </div>
-        </div>
+        </form>
+        
       </div>
 
       <!-- Password Section -->
@@ -83,7 +85,7 @@
             </div>
           </div>
           <div class="text-end">
-            <button class="btn btn-cancel me-2">Cancel</button>
+            <button class="btn btn-cancel me-2"  >Cancel</button>
             <button class="btn btn-primary">Update Password</button>
           </div>
         </div>
