--- a/src/app/subscription/subscription.component.html
+++ b/src/app/subscription/subscription.component.html
@@ -2,15 +2,23 @@
   <div class="row">
     <div class="col-12">
       <h5 class="mb-3">Subscription</h5>
-      <div class="">
-        <div class="card me-3 flex-shrink-0" >
-         
-          
-         
+      <div class="d-flex flex-nowrap overflow-auto hide-scrollbar">
+        <div class="card me-3 flex-shrink-0" style="min-width: 220px;" *ngFor="let stat of stats">
+          <img src="assets/card.jpeg" class="card-img-top" style="width: 250px; height: 150px;" alt="Image">
+          <div class="card-body text-center">
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<style>
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none; 
+    scrollbar-width: none;     
+  }
+  </style>
   
