--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,10 +6,10 @@
       <h6 class="mb-4" style="cursor: pointer;" (click)="switchTab('profile')" [class.text-primary]="currentTab === 'profile'">
         <i class="fa-solid fa-user me-2"></i>Profile
       </h6>
-      <!-- <h6 class="mb-4" style="cursor: pointer;" (click)="switchTab('password')" [class.text-primary]="currentTab === 'password'">
+      <h6 class="mb-4" style="cursor: pointer;" (click)="switchTab('password')" [class.text-primary]="currentTab === 'password'">
         <i class="fa-solid fa-lock me-2"></i>Password
-      </h6> -->
-      <h6 class="mb-4" style="cursor: pointer;" (click)="logout()">
+      </h6>
+      <h6 class="mb-4" style="cursor: pointer;">
         <i class="fa-solid fa-arrow-right-from-bracket me-2"></i>Logout
       </h6>
     </div>
@@ -19,29 +19,17 @@
     <div class="summary-card p-4">
       <!-- Profile Section -->
       <div *ngIf="currentTab === 'profile'">
-<<<<<<< HEAD
-        <form [formGroup]="form">
-=======
         <form >
->>>>>>> balu
           <div class="form-card" *ngIf="pffdata">
             <h5>Sponsor Details</h5>
             <div class="row mb-3">
               <div class="col-md-6">
                 <label>Sponsor ID</label>
-<<<<<<< HEAD
-                <input type="text" class="form-control" [value]="pffdata.refid" readonly>
-              </div>
-              <div class="col-md-6">
-                <label>Sponsor Name</label>
-                <input type="text" class="form-control" [value]="pffdata.name" readonly>
-=======
                 <input type="text" class="form-control" [value]="pffdata.refid" >
               </div>
               <div class="col-md-6">
                 <label>Sponsor Name</label>
                 <input type="text" class="form-control" [(ngModel)]="pffdata.name" name="name">
->>>>>>> balu
               </div>
             </div>
         
@@ -49,43 +37,6 @@
             <div class="row mb-3">
               <div class="col-md-6">
                 <label>Name</label>
-<<<<<<< HEAD
-                <input *ngIf="isEdit" type="text" class="form-control" formControlName="name">
-                <input *ngIf="!isEdit" type="text" class="form-control" [value]="pffdata.name" readonly>
-              </div>
-              <div class="col-md-6">
-                <label>Email</label>
-                <input *ngIf="isEdit" type="email" class="form-control" formControlName="email">
-                <input *ngIf="!isEdit" type="email" class="form-control" [value]="pffdata.email" readonly>
-              </div>
-            </div>
-        
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label>Country</label>
-                <select *ngIf="isEdit" class="form-control" formControlName="country">
-                  <option value="India">India</option>
-                  <option value="USA">USA</option>
-                </select>
-                <input *ngIf="!isEdit" type="text" class="form-control" [value]="pffdata.country" readonly>
-              </div>
-              <div class="col-md-6" *ngIf="pffdata.wallet1 == 1">
-                <label>Wallet1</label>
-                <p class="fw-bold">USDT BEP20</p>
-              </div>
-            </div>
-        
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label>Current Password</label>
-                <input *ngIf="isEdit" type="password" class="form-control" formControlName="password">
-                <input *ngIf="!isEdit" type="password" class="form-control" [value]="pffdata.password" readonly>
-              </div>
-              <div class="col-md-6">
-                <label>New Password</label>
-                <input *ngIf="isEdit" type="password" class="form-control" formControlName="password">
-                <input *ngIf="!isEdit" type="password" class="form-control" [value]="pffdata.password" readonly>
-=======
                 <input type="text" class="form-control" [(ngModel)]="pffdata.name" name="name" >
               </div>
               <div class="col-md-6">
@@ -106,30 +57,20 @@
               <div class="col-md-6">
                 <label>Phone</label>
                 <input type="text" class="form-control" [(ngModel)]="pffdata.phone" name="phone" >
->>>>>>> balu
               </div>
             </div>
         
             <div class="text-end">
-<<<<<<< HEAD
-              <button class="btn btn-danger me-2" type="button" (click)="edit()" *ngIf="!isEdit">Edit</button>
-              <button class="btn btn-success me-2" type="button" (click)="save()" *ngIf="isEdit">Save</button>
-=======
               <button  class="btn btn-danger me-2" type="button" (click)="edit()">Edit</button>
               <button  class="btn btn-success me-2" type="button" (click)="save()">Save</button>
->>>>>>> balu
             </div>
           </div>
         </form>
         
-<<<<<<< HEAD
-        
-=======
->>>>>>> balu
       </div>
 
       <!-- Password Section -->
-      <!-- <div *ngIf="currentTab === 'password'">
+      <div *ngIf="currentTab === 'password'">
         <div class="form-card">
           <h5 class="mb-4">Change Password</h5>
           <div class="row mb-3">
@@ -148,7 +89,7 @@
             <button class="btn btn-primary">Update Password</button>
           </div>
         </div>
-      </div> -->
+      </div>
 
     </div>
   </div>
