--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5" style="background-color: #fff; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
+<div class="container-fluid" style="background-color: #fff; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
     <div class="row d-flex justify-content-center">
       <div class="col-lg-6 d-flex">
         <input type="text" class="form-control date-picker me-2" id="startDate" placeholder="Start Date">
@@ -10,28 +10,21 @@
       <thead>
         <tr>
           <th>S.No</th>
-          <th>Date</th>
+          <th>Remarks</th>
           <th>Income</th>
           <th>Type</th>
-          <th>Remarks</th>
-
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let items of treport let i='index' ">
-          <td>{{i+1}}</td>
-          <td>{{items.cdate}}</td>
-          <td>${{items.amount}}</td>
-          <td>{{items.type}}</td>
-          <td>{{items.remark}}</td>
-        
+        <tr>
+          <td>dsvd</td>
+          <td>ddd</td>
+          <td>ddd</td>
+          <td>ee</td>
+          <td>af</td>
         </tr>
       </tbody>
     </table>
   </div>
-
-
-
-
-  
   
