--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -37,6 +37,7 @@
           style="width: 20px; height: 20px; filter: invert(100%);" alt="Funds icon">
       </i> Incomes <i class="fas fa-caret-down float-end"></i>
     </a>
+    <!-- dfghjk -->
     <div class="collapse ps-3" id="incomeMenu">
       <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link text-white" routerLink="/sponsorincome">Sponsor Income</a></li>
